Few language added

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,12 @@
                     <option value="vi">Vietnamese</option>
                     <option value="th">Thai</option>
                     <option value="sv">Swedish</option>
+                    <option value="fi">Finnish</option>
+                    <option value="da">Danish</option>
+                    <option value="cs">Czech</option>
+                    <option value="el">Greek</option>
+                    <option value="hu">Hungarian</option>
+                    <option value="ro">Romanian</option>
                     <!-- Add more languages as needed -->
                 </select>
             </div>
